feat: suppress warnings, slash command hints, dynamic status, /context & /effort commands
- Suppress JLine warnings via JUL logger level configuration
- Auto-show slash command menu on '/' input (LIST_CHOICES, no auto-insert)
- Add dynamic status bar that updates on /mode, /stream, /bash, /bypass, /reload
- Add /context command: visual context window usage with progress bar
- Add /effort command: 4-level reasoning depth control (low/medium/high/max)
- Add agent.effort config property, injected into System Prompt
- Add javaagentcli launcher script (symlink-friendly, auto --enable-native-access)
- Rewrite README with professional agent architecture documentation